Create TagRepo, and Switch to Async

--- a/Views/AdminTags/Add.cshtml
+++ b/Views/AdminTags/Add.cshtml
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div class="continaer py-5">
+<div class="continaer p-5">
     <form method="post">
         <div class="mb-3">
             <label class="form-label">Name :</label>
