--- a/Views/AdminTags/List.cshtml
+++ b/Views/AdminTags/List.cshtml
@@ -14,7 +14,7 @@
                     <th>Id</th>
                     <th>Name</th>
                     <th>Display Name</th>
-                </tr>
+                </tr>   
             </thead>
             <tbody>
                 @foreach (var tag in Model) {
@@ -27,6 +27,9 @@
                         </td>
                         <td>
                             @tag.DisplayName
+                        </td>
+                        <td>
+                            <a asp-area="" asp-controller="AdminTags" asp-action="Edit" asp-route-id="@tag.Id">Edit</a>
                         </td>
                     </tr>
                 }
