--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="Add">New Tag</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="AdminTags" asp-action="List">All Tags</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="Add">New Blog Post</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="AdminBlogPosts" asp-action="List">All Blog Posts</a>
                             </div>
                         </li>
                     </ul>
