Add WYSIWYG Editor (Froala)

--- a/Views/AdminBlogPosts/Edit.cshtml
+++ b/Views/AdminBlogPosts/Edit.cshtml
@@ -59,3 +59,9 @@
         <p>No Blog Post Found!</p>
     }
 </div>
+
+@section Scripts {
+    <script>
+        var editor = new FroalaEditor('#content');
+    </script>
+}
