--- a/Views/AdminBlogPosts/Add.cshtml
+++ b/Views/AdminBlogPosts/Add.cshtml
@@ -50,3 +50,10 @@
         </div>
     </form>
 </div>
+
+
+@section Scripts {
+    <script>
+        var editor = new FroalaEditor('#content');
+    </script>
+}
