--- a/Views/AdminBlogPosts/Add.cshtml
+++ b/Views/AdminBlogPosts/Add.cshtml
@@ -7,6 +7,8 @@
 </div>
 
 <div class="container py-5">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js"></script>
+
     <form method="post" class="">
         <div class="mb-3">
             <label class="form-label">Heading</label>
@@ -23,6 +25,11 @@
         <div class="mb-3">
             <label class="form-label">Description</label>
             <input type="text" class="form-control" id="description" asp-for="Description" />
+        </div>
+        <div class="mb-3">
+            <label class="form-label">Featured Image Upload</label>
+            <input type="file" id="featuredImageUpload" class="form-control" />
+            <img src="" id="featuredImageDisplay" style="display:none; width: 300px;" />
         </div>
         <div class="mb-3">
             <label class="form-label">Image URL</label>
@@ -55,5 +62,30 @@
 @section Scripts {
     <script>
         var editor = new FroalaEditor('#content');
+
+        const featuredUploadElement = document.getElementById('featuredImageUpload');
+        const featuredImageUrlElement = document.getElementById('featuredImageUrl');
+        const featuredImageDisplayElement = document.getElementById('featuredImageDisplay');
+
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/images', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*'
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    featuredImageUrlElement.value = result;
+                    featuredImageDisplayElement.src = result;
+                    featuredImageDisplayElement.style.display = 'block';
+                });
+        }
+
+        featuredUploadElement.addEventListener('change', uploadFeaturedImage);
     </script>
 }
