--- a/Views/AdminBlogPosts/Edit.cshtml
+++ b/Views/AdminBlogPosts/Edit.cshtml
@@ -30,6 +30,15 @@
                 <input type="text" class="form-control" id="description" asp-for="Description" />
             </div>
             <div class="mb-3">
+                <label class="form-label">Featured Image Upload</label>
+                <input type="file" id="featuredImageUpload" class="form-control" />
+                @if (Model.FeaturedImageUrl != null) {
+                    <img src="@Model.FeaturedImageUrl" id="featuredImageDisplay" style="display:block; width: 300px;" />
+                } else {
+                    <img src="" id="featuredImageDisplay" style="display:none; width: 300px;" />
+                }
+            </div>
+            <div class="mb-3">
                 <label class="form-label">Image URL</label>
                 <input type="text" class="form-control" id="featuredImageUrl" asp-for="FeaturedImageUrl" />
             </div>
@@ -63,5 +72,30 @@
 @section Scripts {
     <script>
         var editor = new FroalaEditor('#content');
+
+        const featuredUploadElement = document.getElementById('featuredImageUpload');
+        const featuredImageUrlElement = document.getElementById('featuredImageUrl');
+        const featuredImageDisplayElement = document.getElementById('featuredImageDisplay');
+
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/images', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*'
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    featuredImageUrlElement.value = result;
+                    featuredImageDisplayElement.src = result;
+                    featuredImageDisplayElement.style.display = 'block';
+                });
+        }
+
+        featuredUploadElement.addEventListener('change', uploadFeaturedImage);
     </script>
 }
