--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<TrustyPortfolio.Models.Domain.BlogPost>
 
 <div class="container col-xxl-8 px-4 py-5">
     <div class="rom align-items-center g-5 py-5">
@@ -12,6 +12,37 @@
             <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&w=600" 
                 alt="Profile Picture ;)"
                 class="d-block mx-lg-auto img-fluid" width="300"/>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-6">
+            @if (Model != null && Model.Any()) {
+                foreach (var blogPost in Model) {
+                    <div class="mb-5 bg-light box-shadow p-5">
+                        <img src="@blogPost.FeaturedImageUrl" alt="@blogPost.Heading"
+                             class="mb-2 d-block img-fluid" />
+                        <h2 class="mb-4">@blogPost.Heading</h2>
+                        <p class="mb-4">Published Date: @blogPost.PublishDate.ToShortDateString()</p>
+                        <p class="mb-4">
+                            @foreach (var tag in blogPost.Tags) {
+                                <span class="badge bg-secondary me-1">@tag.Name</span>
+                            }
+                        </p>
+                        <p class="mb-4">@blogPost.Description</p>
+                        <a class="btn btn-dark"
+                            asp-area=""
+                            asp-controller="Blogs"
+                            asp-action="Index"
+                            asp-route-urlHandle="@blogPost.UrlHandle"
+                        >Read More</a>
+                    </div>
+                }
+            } else {
+                <p>Sorry, no posts were found!</p>
+            }
         </div>
     </div>
 </div>
