--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model List<TrustyPortfolio.Models.Domain.BlogPost>
+﻿@model TrustyPortfolio.Models.ViewModels.HomeViewModel
 
 <div class="container col-xxl-8 px-4 py-5">
-    <div class="rom align-items-center g-5 py-5">
+    <div class="row align-items-center g-5 py-5">
         <div class="col-12 col-lg-6">
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 TrustyPortfolio
@@ -18,9 +18,23 @@
 
 <div class="container">
     <div class="row justify-content-center">
+        <div class="col-6 d-flex">
+            @if (Model != null && Model.Tags.Any()) {
+                @foreach (var tag in Model.Tags) {
+                    <span class="badge bg-dark me-1">@tag.Name</span>
+                }
+            } else {
+                <p>This is where I'd put my tags.... if I had any!</p>
+            }
+        </div>
+    </div>
+</div>
+
+<div class="container">     
+    <div class="row justify-content-center">
         <div class="col-6">
-            @if (Model != null && Model.Any()) {
-                foreach (var blogPost in Model) {
+            @if (Model != null && Model.BlogPosts.Any()) {
+                foreach (var blogPost in Model.BlogPosts) {
                     <div class="mb-5 bg-light box-shadow p-5">
                         <img src="@blogPost.FeaturedImageUrl" alt="@blogPost.Heading"
                              class="mb-2 d-block img-fluid" />
