--- a/Views/AdminTags/List.cshtml
+++ b/Views/AdminTags/List.cshtml
@@ -15,8 +15,8 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col col-md-3 d-flex">
-                <input type="text" class="form-control" name="searchQuery" value="@ViewBag.SearchQuery"/>
-                <button type="submit" class="btn btn-warning ms-3">Search</button>
+                <input class="form-control me-sm-2" type="search" placeholder="Search" name="searchQuery" value="@ViewBag.SearchQuery"/>
+                <button type="submit" class="btn btn-info ms-3">Search</button>
             </div>
         </div>
     </div>
@@ -28,7 +28,6 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th>Id</th>
                     <th>Name
                         <span>
                             <span>
@@ -84,56 +83,80 @@
                 @foreach (var tag in Model) {
                     <tr>
                         <td>
-                            @tag.Id
-                        </td>
-                        <td>
                             @tag.Name
                         </td>
                         <td>
                             @tag.DisplayName
                         </td>
                         <td>
-                            <a asp-area="" asp-controller="AdminTags" asp-action="Edit" asp-route-id="@tag.Id">Edit</a>
+                            <a class="btn btn-warning" asp-area="" asp-controller="AdminTags" asp-action="Edit" asp-route-id="@tag.Id">Edit</a>
+                            <a class="btn btn-danger" onclick="showDeleteConfirmation('@Url.Action("Delete", "AdminTags", new { id = tag.Id })')">Delete</a>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
-
-        <nav aria-label="Page navigation example">
+        <div>
             <ul class="pagination">
                 <li class="page-item">
                     <a class="page-link"
-                               asp-controller="AdminTags"
-                               asp-action="List"
-                               asp-route-pageNumber="@prevPage"
-                               asp-route-pageSize="@ViewBag.PageSize">Previous</a></li>
-                @for (int i = 1; i < ViewBag.TotalPages + 1; i++) {
+                       asp-controller="AdminTags"
+                       asp-action="List"
+                       asp-route-pageNumber="@prevPage"
+                       asp-route-pageSize="@ViewBag.PageSize">&laquo;</a>
+                    @for (int i = 1; i < ViewBag.TotalPages + 1; i++) {
                     <li class="page-item">
-                        <a class="page-link">
                             <a class="page-link"
                                asp-controller="AdminTags"
                                asp-action="List"
                                asp-route-pageNumber="@i"
                                asp-route-pageSize="@ViewBag.PageSize"
                                asp-route-sortDirection="@ViewBag.SortDirection"
-                               asp-route-sortBy="@ViewBag.SortBy"
-                            >@i</a>
+                               asp-route-sortBy="@ViewBag.SortBy">@i</a>
                     </li>
-                }
+                    }
                 <li class="page-item">
                     <a class="page-link"
-                               asp-controller="AdminTags"
-                               asp-action="List"
-                               asp-route-pageNumber="@nextPage"
-                               asp-route-pageSize="@ViewBag.PageSize"
-                               asp-route-sortDirection="@ViewBag.SortDirection"
-                               asp-route-sortBy="@ViewBag.SortBy">Next</a>
+                       asp-controller="AdminTags"
+                       asp-action="List"
+                       asp-route-pageNumber="@nextPage"
+                       asp-route-pageSize="@ViewBag.PageSize"
+                       asp-route-sortDirection="@ViewBag.SortDirection"
+                       asp-route-sortBy="@ViewBag.SortBy">&raquo;</a>
                 </li>
             </ul>
-        </nav>
+        </div>
 
     } else {
         <p>No Tags Found!</p>
     }
 </div>
+
+<div class="modal" id="deleteConfirmationModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Confirm Deletion</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to delete this tag?</p>
+            </div>
+            <div class="modal-footer">
+                <form id="deleteConfirmationForm" method="post">
+                    <button type="submit" class="btn btn-danger">Confirm Delete</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script>
+    function showDeleteConfirmation(deleteUrl) {
+        var modal = new bootstrap.Modal(document.getElementById('deleteConfirmationModal'));
+        document.getElementById('deleteConfirmationForm').action = deleteUrl;
+        modal.show();
+    }
+</script>
