--- a/Views/AdminProjects/List.cshtml
+++ b/Views/AdminProjects/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<TrustyPortfolio.Models.Domain.BlogPost>
+﻿@model List<TrustyPortfolio.Models.Domain.Project>
 
 @{
     int nextPage = Convert.ToInt32(ViewBag.PageNumber) + 1;
@@ -7,11 +7,11 @@
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
-        <h1>All Blog Posts - Admin Functionality</h1>
+        <h1>All Projects - Admin Functionality</h1>
     </div>
 </div>
 
-<form method="get" asp-controller="AdminBlogPosts" asp-action="List" asp-route-searchQuery="">
+<form method="get" asp-controller="AdminProjects" asp-action="List" asp-route-searchQuery="">
     <div class="container mt-5">
         <div class="row">
             <div class="col col-md-3 d-flex">
@@ -32,7 +32,7 @@
                         <span>
                             <span>
                                 <a class="btn btn-light"
-                                   asp-controller="AdminBlogPosts"
+                                   asp-controller="AdminProjects"
                                    asp-action="List"
                                    asp-route-sortBy="Title"
                                    asp-route-sortDirection="Asc"
@@ -42,7 +42,7 @@
                             </span>
                             <span>
                                 <a class="btn btn-light"
-                                   asp-controller="AdminBlogPosts"
+                                   asp-controller="AdminProjects"
                                    asp-action="List"
                                    asp-route-sortBy="Title"
                                    asp-route-sortDirection="Desc"
@@ -56,32 +56,45 @@
                         Tags
                     </td>
                     <td>
+                        Blog Posts
+                    </td>
+                    <td>
                     </td>
                 </tr>
             </thead>
             <tbody>
-                @foreach (var blogPost in Model) {
+                @foreach (var project in Model) {
                     <tr>
                         <td>
-                            @blogPost.Title
+                            @project.Title
                         </td>
                         <td>
                             <div class="d-flex">
-                                @if (blogPost.Tags != null && blogPost.Tags.Any()) {
-                                    foreach (var tag in blogPost.Tags) {
+                                @if (project.Tags != null && project.Tags.Any()) {
+                                    foreach (var tag in project.Tags) {
                                         <span class="badge bg-secondary me-1">@tag.Name</span>
                                     }
                                 }
                             </div>
                         </td>
                         <td>
-                            <a class="btn btn-warning" asp-area="" asp-controller="AdminBlogPosts" asp-action="Edit" asp-route-id="@blogPost.Id">Edit</a>
-                            <a class="btn btn-danger" onclick="showDeleteConfirmation('@Url.Action("Delete", "AdminBlogPosts", new { id = blogPost.Id })')">Delete</a>
+                            <div class="d-flex">
+                                @if (project.Tags != null && project.Blogs.Any()) {
+                                    foreach (var blog in project.Blogs) {
+                                        <span class="badge bg-secondary me-1">@blog.Title</span>
+                                    }
+                                }
+                            </div>
+                        </td>
+                        <td>
+                            <a class="btn btn-warning" asp-area="" asp-controller="AdminProjects" asp-action="Edit" asp-route-id="@project.Id">Edit</a>
+                            <a class="btn btn-danger" onclick="showDeleteConfirmation('@Url.Action("Delete", "AdminProjects", new { id = project.Id })')">Delete</a>
                         </td>
                     </tr>
                 }
             </tbody>
         </table>
+
         <div>
             <ul class="pagination">
                 <li class="page-item">
@@ -113,7 +126,7 @@
             </ul>
         </div>
     } else {
-        <p>No Blog Posts Found!</p>
+        <p>No Projects Found!</p>
     }
 </div>
 
@@ -125,7 +138,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this Blog Post?</p>
+                <p>Are you sure you want to delete this Project?</p>
             </div>
             <div class="modal-footer">
                 <form id="deleteConfirmationForm" method="post">
@@ -136,8 +149,6 @@
         </div>
     </div>
 </div>
-
-
 
 <script>
     function showDeleteConfirmation(deleteUrl) {
