--- a/Views/AdminTags/List.cshtml
+++ b/Views/AdminTags/List.cshtml
@@ -7,7 +7,7 @@
 
 <div class="bg-secondary bg-opacity-10 py-2">
     <div class="container">
-        <h1>Show All Tags - Admin Functionality</h1>
+        <h1>All Tags - Admin Functionality</h1>
     </div>
 </div>
 
@@ -77,6 +77,7 @@
                             </span>
                         </span>
                     </th>
+                    <th></th>
                 </tr>   
             </thead>
             <tbody>
