About Me, Resume Pages
Also fixed Controllers to support Blog "Featured" property and added a download button on resume page.

--- a/Views/AdminProjects/Add.cshtml
+++ b/Views/AdminProjects/Add.cshtml
@@ -59,7 +59,8 @@
             <label class="form-label">Tags</label>
             <select class="form-select" asp-items="@Model.Tags" asp-for="SelectedTags">
             </select>
-        </div><div class="mb-3">
+        </div>
+        <div class="mb-3">
             <label class="form-label">Related Blogs</label>
             <select class="form-select" asp-items="@Model.Blogs" asp-for="SelectedBlogs">
             </select>
