--- a/Views/AdminBlogPosts/Add.cshtml
+++ b/Views/AdminBlogPosts/Add.cshtml
@@ -47,6 +47,10 @@
             <input class="form-check-input" type="checkbox" id="visible" asp-for="Visible">
             <label class="form-check-label">Is Visible?</label>
         </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" id="featured" asp-for="Featured">
+            <label class="form-check-label">Is Featured?</label>
+        </div>
         <div class="mb-3">
             <label class="form-label">Tags</label>
             <select class="form-select" asp-items="@Model.Tags" asp-for="SelectedTags">
