--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,7 +31,10 @@
                             <a class="nav-link" asp-area="" asp-controller="Projects" asp-action="List">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Hello World!</a>
+                            <a class="nav-link" asp-area="" asp-controller="Resume" asp-action="Index">Resume</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="About" asp-action="Index">About Me</a>
                         </li>
                         @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin")) {
                             <li class="nav-item dropdown">
