Created Section for Featured Blogs

--- a/Views/Blogs/List.cshtml
+++ b/Views/Blogs/List.cshtml
@@ -4,42 +4,86 @@
     ViewData["Title"] = "Blogs";
 }
 
+<!--
+** SMALL CARD
+
+<div class="col-lg-4 col-md-6 col-sm-12 mb-3">
+    <div class="card text-white bg-primary mb-3">
+            <div class="card-header">blogPost.Heading</div>
+            <div class="card-body">
+            <h4 class="card-title">blogPost.Title</h4>
+            <p class="card-text">blogPost.Description</p>
+        </div>
+    </div>
+</div>
+-->
+
 <div class="container mt-4">
     <div class="row justify-content-center">
-        <div class="col-6">
-            @if (Model != null && Model.Any()) {
-                foreach (var blogPost in Model) {
-                    @if (blogPost.Visible && !blogPost.Featured) {
-                        <div class="card mb-3">
-                            <h3 class="card-header">@blogPost.Heading</h3>
-                            <div class="card-body">
-                                <h5 class="card-title">@blogPost.Title</h5>
-                            </div>
-                            <img src="@blogPost.FeaturedImageUrl" />
-                            <div class="card-body">
-                                <p class="card-text">@blogPost.Description</p>
-                            </div>
-                            <div class="col-6 d-flex">
-                                @if (Model != null && blogPost.Tags.Any()) {
-                                    @foreach (var tag in blogPost.Tags) {
-                                        <span class="badge bg-primary ms-1">@tag.Name</span>
-                                    }
-                                } else {
-                                    <p>This is where I'd put the tags.... if this post had any!</p>
-                                }
-                            </div>
-                            <div class="card-body">
-                                <a class="btn btn-primary card-link" asp-area="" asp-controller="Blogs" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read More</a>
-                            </div>
-                            <div class="card-footer text-muted">
-                                @blogPost.PublishDate.ToShortDateString()
-                            </div>
+        <div class="col-12">
+            <h2 class="text-center">Featured Blogs</h2>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        @if (Model != null && Model.Any()) {
+            @foreach (var blogPost in Model.Where(blogPost => blogPost.Visible && blogPost.Featured)) {
+                <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mt-4">
+                    <div class="card mb-3">
+                        <h3 class="card-header">@blogPost.Heading</h3>
+                        <div class="card-body">
+                            <h5 class="card-title">@blogPost.Title</h5>
                         </div>
-                    }
-                }
-            } else {
-                <p>Sorry, no posts were found!</p>
+                        <img src="@blogPost.FeaturedImageUrl" class="card-img-top" alt="Featured Image" />
+                        <div class="card-body">
+                            <p class="card-text">@blogPost.Description</p>
+                        </div>
+                        <div class="col-12 d-flex">
+                            @if (Model != null && blogPost.Tags.Any()) {
+                                @foreach (var tag in blogPost.Tags) {
+                                    <span class="badge bg-primary ms-1">@tag.Name</span>
+                                }
+                            } else {
+                                <p>This is where I'd put the tags.... if this post had any!</p>
+                            }
+                        </div>
+                        <div class="card-body">
+                            <a class="btn btn-primary card-link" asp-area="" asp-controller="Blogs" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read More</a>
+                        </div>
+                        <div class="card-footer text-muted">
+                            @blogPost.PublishDate.ToShortDateString()
+                        </div>
+                    </div>
+                </div>
             }
+        }
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 mt-4 mb-4">
+            <h2 class="text-center">Explore More Blogs</h2>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-lg-12">
+            <div class="row">
+                @if (Model != null && Model.Any()) {
+                    @foreach (var blogPost in Model) {
+                        @if (blogPost.Visible && !blogPost.Featured) {
+                            <div class="col-lg-2 col-md-3 col-sm-6 mb-3">
+                                <div class="card text-white bg-primary mb-3">
+                                    <div class="card-header">@blogPost.Heading</div>
+                                    <div class="card-body">
+                                        <h4 class="card-title">@blogPost.Title</h4>
+                                        <p class="card-text">@blogPost.Description</p>
+                                    </div>
+                                </div>
+                                <a class="btn btn-outline-primary card-link" asp-area="" asp-controller="Blogs" asp-action="Index" asp-route-urlHandle="@blogPost.UrlHandle">Read More</a>
+                            </div>
+                        }
+                    }
+                } else {
+                    <p>Sorry, no posts were found!</p>
+                }
+            </div>
         </div>
     </div>
 </div>
