--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,11 +6,11 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 TrustyPortfolio
             </h1>
-            <p>Welcome to my portfolio! HIRE ME NOW!</p>
+            <p>Welcome to my portfolio!</p>
         </div>
         <div class="col-12 col-lg-6">
-            <img src="https://images.pexels.com/photos/57690/pexels-photo-57690.jpeg?auto=compress&cs=tinysrgb&w=600" 
-                alt="Profile Picture ;)"
+            <img src="https://res.cloudinary.com/djdtmbpce/image/upload/v1711760505/l8mrq0vrbuaugbw9vpbt.jpg"
+                 alt="Profile Picture ;)"
                 class="d-block mx-lg-auto img-fluid" width="300"/>
         </div>
     </div>
