--- a/Views/Blogs/Index.cshtml
+++ b/Views/Blogs/Index.cshtml
@@ -9,7 +9,7 @@
         <div class="col-12 col-lg-6">
             @if (Model != null) {
                 <h1 class="mb-3">
-                    @Model.Heading
+                    @Model.Title
                 </h1>
                 <div class="d-flex justify-content-end mb-3">
                     <span class="text-secondary">@Model.PublishDate.ToShortDateString()</span>
