--- a/Views/AdminTags/Edit.cshtml
+++ b/Views/AdminTags/Edit.cshtml
@@ -9,17 +9,12 @@
 <div class="container py-5">
     @if (Model != null) {
         <form method="post">
-            <div class="mb-3">
-                <label class="form-label">Id</label>
-                <input type="text" id="id" class="form-control" asp-for="Id" readonly />
+            <div>
+                <input type="hidden" id="id" class="form-control" asp-for="Id" readonly />
             </div>
             <div class="mb-3">
                 <label class="form-label">Name</label>
                 <input type="text" id="name" class="form-control" asp-for="Name" />
-            </div>
-            <div class="mb-3">
-                <label class="form-label">Display Name</label>
-                <input type="text" id="displayName" class="form-control" asp-for="DisplayName" />
             </div>
             <div class="mb-3">
                 <button type="submit" class="btn btn-dark">Update</button>
